# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
images/: README.md  image.ppm
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/: CMakeLists.txt  main.cpp
